fix: navbar overlapping section titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h3 {
   top: 0;
   background-color: whitesmoke;
   box-shadow: 1px 1px 20px 1px rgba(223, 223, 223, 0.3);
-  z-index: 9999;
+  z-index: 999;
 }
 
 .nav-bar {
@@ -92,7 +92,7 @@ h3 {
 
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
 }
 
@@ -204,6 +204,7 @@ h3 {
   justify-content: center;
   background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(253, 253, 253, 0.3)), url("../images/about-bg.jpg") no-repeat center center;
   background-size: cover;
+  padding-top: 5em;
 }
 
 .content-box {
@@ -291,7 +292,7 @@ p {
 
 /* ===== Hero section ===== */
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 20vh;
   display: flex;
   flex-direction: row;
@@ -329,6 +330,11 @@ p {
 }
 
 /* ====== Services general style ===== */
+
+#apartments, #single-bed, #double-bed, #storage, #find_us {
+  padding-top: 5em;
+}
+
 
 section h2 {
   text-align: center;
@@ -675,6 +681,12 @@ textarea {
   padding: .4em;
   border: 2px solid #242929;
   border-radius: .2em;
+}
+
+/* ===== Footer-address  ===== */
+
+footer > .horizontal-line {
+  margin-top: 3em;
 }
 
 /* ========================= Media queries  ========================= */
